change import Assert.* on import every used method and replace (long) witn (int)